# scaffold

./: Cargo.toml  Justfile
src/: command.rs  main.rs  repo.rs  template.rs
src/command/: list.rs  new.rs  save.rs
