[package]
name = "scaffold"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
clap = { version = "4.1.4", features = ["derive"] }
clap_complete = "4.1.1"
expanduser = "1.2.2"
git-repository = "0.35.0"
ignore = "0.4.20"
git-glob = "=0.5.3"
